Добавляет базовую стилизацию при помощи препроцессоров

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,18 @@
 /* GLOBAL */
 @import "./common/variables.scss";
-@import "./common/global.scss";
+@import "./common/mixins.scss";
 @import "./common/fonts.scss";
+@import "./common/global.scss";
+@import "./common/visually-hidden.scss";
 
 /* BLOCKS */
-@import "./blocks/header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/programs.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/example.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/catalog-additionally.scss";
+@import "./blocks/subscribe.scss";
