--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,1 +1,7 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
+body {
+  font-family: $primary-font;
+  font-size: 16px;
+  line-height: 24px;
+  background-color: #ffffff;
+}
