--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,3 +1,3 @@
 /* здесь используйте глобальные переменные */
-$primary-font: "Lato", sans-serif;
-$secondary-font: "Oswald", sans-serif;
+$primary-font: "Lato", "Arial", sans-serif;
+$secondary-font: "Oswald", "Arial", sans-serif;
