--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -44,3 +44,51 @@
   color: #000000;
   text-transform: uppercase;
 }
+
+.example__slider {
+  position: relative;
+}
+
+.example__slider-button {
+  background-color: #666666;
+  width: 4px;
+  height: 100%;
+  border: none;
+  border-radius: 2px;
+  display: block;
+  cursor: pointer;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.example__slider-button::before {
+  content: "";
+  background-color: #ffffff;
+  border: 2px solid #666666;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.example__slider-button::after {
+  content: "";
+  background-color: #666666;
+  width: 24px;
+  height: 18px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  mask-image: url("../../icons/stack.svg#slider");
+  mask-repeat: no-repeat;
+  mask-size: 24px 18px;
+  mask-position: 50%;
+}
