--- a/source/styles/blocks/catalog-additionally.scss
+++ b/source/styles/blocks/catalog-additionally.scss
@@ -39,6 +39,8 @@
 
 .catalog-additionally__gift {
   background-color: rgba(104, 183, 56, 0.85);
+  width: 280px;
+  height: 290px;
 }
 
 .catalog-additionally__description {
@@ -47,4 +49,15 @@
   font-weight: 400;
   line-height: 20px;
   color: #ffffff;
+  position: relative;
+}
+
+.catalog-additionally__description::before {
+  content: "";
+  background-image: url("../../icons/stack.svg#gift");
+  background-repeat: no-repeat;
+  background-size: 78px 80px;
+  width: 78px;
+  height: 80px;
+  position: absolute;
 }
