--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,3 +1,47 @@
+.main-footer-list {
+  list-style-type: none;
+}
+
+.main-footer__link {
+  display: block;
+}
+
+.main-footer__link--vkontakte::before {
+  content: "";
+  background-color: #666666;
+  mask-image: url("../../icons/stack.svg#vkontakte");
+  mask-size: 28px 22px;
+  mask-position: 100%;
+  mask-repeat: no-repeat;
+  width: 28px;
+  height: 22px;
+  display: block;
+}
+
+.main-footer__link--youtube::before {
+  content: "";
+  background-color: #666666;
+  mask-image: url("../../icons/stack.svg#youtube");
+  mask-size: 28px 22px;
+  mask-position: 100%;
+  mask-repeat: no-repeat;
+  width: 28px;
+  height: 22px;
+  display: block;
+}
+
+.main-footer__link--telegram::before {
+  content: "";
+  background-color: #666666;
+  mask-image: url("../../icons/stack.svg#telegram");
+  mask-size: 28px 22px;
+  mask-position: 100%;
+  mask-repeat: no-repeat;
+  width: 28px;
+  height: 22px;
+  display: block;
+}
+
 .htmlacademy-link {
   font-family: $primary-font;
   font-size: 16px;
@@ -5,4 +49,16 @@
   line-height: 20px;
   color: #444444;
   text-decoration: none;
+}
+
+.htmlacademy-link::after {
+  content: "";
+  background-color: #666666;
+  mask-image: url("../../icons/stack.svg#htmlacademy-logo");
+  mask-size: 27px 34px;
+  mask-position: 100%;
+  mask-repeat: no-repeat;
+  width: 27px;
+  height: 34px;
+  display: block;
 }
