--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -7,10 +7,24 @@
   text-transform: uppercase;
 }
 
+@media screen and (min-width: 768px) {
+  .contacts__description {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
+
 .contacts__adress {
   font-family: $primary-font;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
   color: #444444;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__adress {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
