--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -6,6 +6,13 @@
   color: #000000;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
 .advantages__list {
   list-style-type: none;
 }
@@ -18,6 +25,13 @@
   color: #444444;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages__description {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
 .advantages__item::before {
   content: "";
   background-color: #68b738;
@@ -26,6 +40,13 @@
   width: 60px;
   height: 60px;
   display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__item::before {
+    width: 80px;
+    height: 80px;
+  }
 }
 
 .advantages__item--block-1::before {
