--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -12,6 +12,21 @@
   color: #000000;
 }
 
+@media screen and (min-width: 768px) {
+  .main-nav__item a {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-nav__item a {
+    font-size: 20px;
+    line-height: 30px;
+    color: #111111;
+  }
+}
+
 .main-nav__toggle {
   background-color: #ffffff;
   background-image: url("../../icons/stack.svg#burger-menu");
