--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -16,12 +16,26 @@
   text-transform: uppercase;
 }
 
+@media screen and (min-width: 768px) {
+  .programs__title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
 .programs__description {
   font-family: $primary-font;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
   color: #444444;
+}
+
+@media screen and (min-width: 768px) {
+  .programs__description {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .programs__link {
@@ -34,6 +48,13 @@
   color: #000000;
 }
 
+@media screen and (min-width: 768px) {
+  .programs__link {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
 .programs__link:hover {
   color: #000000;
 }
@@ -42,13 +63,27 @@
   opacity: 0.3;
 }
 
-.programs__item--slim::before {
+.programs__item::before {
   content: "";
   background-color: #68b738;
   border-radius: 50%;
   width: 50px;
   height: 50px;
   display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .programs__item::before {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .programs__item::before {
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .programs__item--slim::after {
@@ -63,13 +98,24 @@
   left: 7px;
 }
 
-.programs__item--pro::before {
-  content: "";
-  background-color: #68b738;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  display: block;
+@media screen and (min-width: 768px) {
+  .programs__item--slim::after {
+    background-size: 140px 194px;
+    width: 140px;
+    height: 194px;
+    top: -11px;
+    left: 30px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .programs__item--slim::after {
+    background-size: 70px 97px;
+    width: 70px;
+    height: 97px;
+    top: -6px;
+    left: 15px;
+  }
 }
 
 .programs__item--pro::after {
@@ -81,7 +127,27 @@
   height: 28px;
   position: absolute;
   top: 11px;
-  left: -9px;
+  left: -8px;
+}
+
+@media screen and (min-width: 768px) {
+  .programs__item--pro::after {
+    background-size: 268px 112px;
+    width: 268px;
+    height: 112px;
+    top: 44px;
+    left: -34px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .programs__item--pro::after {
+    background-size: 134px 56px;
+    width: 134px;
+    height: 56px;
+    top: 20px;
+    left: -19px;
+  }
 }
 
 .programs__link::after {
