--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,6 +1,21 @@
 .promo__wrapper {
   color: #ffffff;
-  background-color: rgba(104, 183, 56, 0.85);
+  background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/index-cat-bg-mobile@1x.png" 1x, "../../images/index-cat-bg-mobile@2x.png" 2x);
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 768px) {
+  .promo__wrapper {
+    color: #000000;
+    background: #ffffff;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .promo__wrapper {
+    color: #000000;
+    background: linear-gradient(to right, #ffffff 50%, rgba(104, 183, 56, 0.85) 50%), image-set("../../images/index-cat-bg-desktop@1x.png" 1x, "../../images/index-cat-bg-desktop@2x.png" 2x);
+  }
 }
 
 .promo__title {
@@ -10,6 +25,13 @@
   line-height: 36px;
 }
 
+@media screen and (min-width: 768px) {
+  .promo__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
 .promo__slogan {
   font-family: $secondary-font;
   font-size: 14px;
@@ -17,10 +39,24 @@
   line-height: 14px;
 }
 
+@media screen and (min-width: 768px) {
+  .promo__slogan {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
 .promo__button {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .promo__button {
+    font-size: 20px;
+    line-height: 26px;
+  }
 }
 
 .button-primary {
