--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,17 +1,38 @@
 .subscribe__title {
   font-family: $secondary-font;
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 400;
-  line-height: 32px;
+  line-height: 24px;
   color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe__title {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .subscribe__title {
+    font-size: 40px;
+    line-height: 40px;
+  }
 }
 
 .subscribe__description {
   font-family: $secondary-font;
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 32px;
+  line-height: 24px;
   color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe__description {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 
 .subscribe__input {
@@ -22,10 +43,11 @@
   color: #444444;
 }
 
-.catalog-additionally__button {
+.newsletter-button {
   font-size: 20px;
   font-weight: 400;
   line-height: 26px;
+  border: none;
 }
 
 .button-primary {
