--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -6,6 +6,13 @@
   color: #000000;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
 .advantages__list {
   list-style-type: none;
 }
@@ -16,4 +23,52 @@
   font-weight: 400;
   line-height: 18px;
   color: #444444;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__description {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+.advantages__item::before {
+  content: "";
+  background-color: #68b738;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  width: 60px;
+  height: 60px;
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__item::before {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+.advantages__item--block-1::before {
+  content: "";
+  background-image: url("../../icons/stack.svg#leaf");
+  background-size: 30px 32px;
+}
+
+.advantages__item--block-2::before {
+  content: "";
+  background-image: url("../../icons/stack.svg#powder");
+  background-size: 30px 32px;
+}
+
+.advantages__item--block-3::before {
+  content: "";
+  background-image: url("../../icons/stack.svg#eat");
+  background-size: 30px 32px;
+}
+
+.advantages__item--block-4::before {
+  content: "";
+  background-image: url("../../icons/stack.svg#time");
+  background-size: 30px 32px;
 }
