--- a/source/styles/blocks/catalog-additionally.scss
+++ b/source/styles/blocks/catalog-additionally.scss
@@ -1,9 +1,23 @@
 .catalog-additionally__title {
   font-family: $secondary-font;
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 400;
-  line-height: 32px;
+  line-height: 24px;
   color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__title {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__title {
+    font-size: 40px;
+    line-height: 40px;
+  }
 }
 
 .catalog-additionally__list {
@@ -12,19 +26,33 @@
 
 .catalog-additionally__caption {
   font-family: $secondary-font;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 16px;
   color: #222222;
   text-transform: uppercase;
 }
 
+@media screen and (min-width: 768px) {
+  .catalog-additionally__caption {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
 .catalog-additionally__text {
   font-family: $primary-font;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 14px;
   color: #444444;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__text {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .catalog-additionally__button {
@@ -38,7 +66,27 @@
 }
 
 .catalog-additionally__gift {
-  background-color: rgba(104, 183, 56, 0.85);
+  background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-mobile@1x.png" 1x, "../../images/catalog-cat-bg-mobile@2x.png" 2x);
+  background-repeat: no-repeat;
+  width: 280px;
+  height: 290px;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__gift {
+    background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-tablet@1x.png" 1x, "../../images/catalog-cat-bg-tablet@2x.png" 2x);
+    width: 707px;
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__gift {
+    color: #000000;
+    background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-desktop@1x.png" 1x, "../../images/catalog-cat-bg-desktop@2x.png" 2x);
+    width: 245px;
+    height: 288px;
+  }
 }
 
 .catalog-additionally__description {
@@ -47,4 +95,23 @@
   font-weight: 400;
   line-height: 20px;
   color: #ffffff;
+  position: relative;
+}
+
+.catalog-additionally__description::before {
+  content: "";
+  background-image: url("../../icons/stack.svg#gift");
+  background-repeat: no-repeat;
+  background-size: 78px 80px;
+  width: 78px;
+  height: 80px;
+  position: absolute;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__description::before {
+    background-size: 80px 83px;
+    width: 80px;
+    height: 83px;
+  }
 }
