--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,9 +1,16 @@
 .catalog__title {
   font-family: $secondary-font;
-  font-size: 60px;
+  font-size: 36px;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 36px;
   color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .catalog__list {
@@ -11,7 +18,13 @@
 }
 
 .catalog__item {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__item {
+    background-color: #f2f2f2;
+  }
 }
 
 .catalog__link {
@@ -20,11 +33,18 @@
 
 .catalog__caption {
   font-family: $secondary-font;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 20px;
   color: #222222;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__caption {
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
 
 .catalog__list-info {
@@ -33,10 +53,17 @@
 
 .catalog__item-info {
   font-family: $primary-font;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 16px;
   color: #444444;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__item-info {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .catalog__button {
@@ -59,8 +86,25 @@
 
 .catalog__text {
   font-family: $primary-font;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 16px;
   color: #444444;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__text {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+
+.catalog__item--more::before {
+  content: "";
+  background-image: url("../../icons/stack.svg#plus");
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+  width: 30px;
+  height: 30px;
+  position: absolute;
 }
