--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -2,6 +2,18 @@
   background-color: #eaeaea;
 }
 
+@media screen and (min-width: 768px) {
+  .example__wrapper {
+    background-color: #ffffff;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .example__wrapper {
+    background-color: #eaeaea;
+  }
+}
+
 .example__title {
   font-family: $secondary-font;
   font-size: 36px;
@@ -10,12 +22,32 @@
   color: #000000;
 }
 
+@media screen and (min-width: 768px) {
+  .example__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .example__title {
+    background-color: #ffffff;
+  }
+}
+
 .example__description {
   font-family: $primary-font;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
   color: #444444;
+}
+
+@media screen and (min-width: 768px) {
+  .example__description {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .example__number {
@@ -27,6 +59,13 @@
   text-transform: uppercase;
 }
 
+@media screen and (min-width: 768px) {
+  .example__number {
+    font-size: 30px;
+    line-height: 37px;
+  }
+}
+
 .example__text {
   font-family: $primary-font;
   font-size: 12px;
@@ -36,6 +75,13 @@
   text-transform: lowercase;
 }
 
+@media screen and (min-width: 768px) {
+  .example__text {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+
 .example__comment {
   font-family: $secondary-font;
   font-size: 14px;
@@ -43,4 +89,78 @@
   line-height: 20px;
   color: #000000;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .example__comment {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.example__slider {
+  background-color: #eaeaea;
+  position: relative;
+}
+
+.example__slider-button {
+  background-color: #666666;
+  width: 4px;
+  height: 100%;
+  border: none;
+  border-radius: 2px;
+  display: block;
+  cursor: pointer;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.example__slider-button:hover,
+.example__slider-button:hover::after {
+  background-color: #68b738;
+}
+
+.example__slider-button:active,
+.example__slider-button:active::after {
+  background-color: rgba(94, 170, 47, 0.6);
+}
+
+.example__slider-button::before {
+  content: "";
+  background-color: #ffffff;
+  border: 2px solid #666666;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.example__slider-button:hover::before {
+  border: 2px solid #68b738;
+}
+
+.example__slider-button:active::before {
+  border: 2px solid rgba(94, 170, 47, 0.6);
+}
+
+.example__slider-button::after {
+  content: "";
+  background-color: #666666;
+  width: 24px;
+  height: 18px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  mask-image: url("../../icons/stack.svg#slider");
+  mask-repeat: no-repeat;
+  mask-size: 24px 18px;
+  mask-position: 50%;
 }
