--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -11,3 +11,38 @@
   text-decoration: 0;
   color: #000000;
 }
+
+@media screen and (min-width: 768px) {
+  .main-nav__item a {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-nav__item a {
+    font-size: 20px;
+    line-height: 30px;
+    color: #111111;
+  }
+}
+
+.main-nav__toggle {
+  background-color: #ffffff;
+  background-image: url("../../icons/stack.svg#burger-menu");
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  width: 24px;
+  height: 24px;
+  border: none;
+}
+
+.main-nav__toggle--close {
+  background-color: #ffffff;
+  background-image: url("../../icons/stack.svg#close");
+  background-size: 18px 18px;
+  background-repeat: no-repeat;
+  width: 18px;
+  height: 18px;
+  border: none;
+}
