Добавляет адаптивную сетку

--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,3 +1,8 @@
+.contacts__wrapper {
+  display: flex;
+  padding: 26px 20px;
+}
+
 .contacts__description {
   font-family: $secondary-font;
   font-size: 16px;
