--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,5 +1,21 @@
 .main-nav__list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav__list {
+    display: flex;
+    width: 436px;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-nav__list {
+    width: 475px;
+  }
 }
 
 .main-nav__item a {
@@ -35,6 +51,12 @@
   width: 24px;
   height: 24px;
   border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav__toggle {
+    display: none;
+  }
 }
 
 .main-nav__toggle--close {
