--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,13 +1,19 @@
 .promo__wrapper {
   color: #ffffff;
-  background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/index-cat-bg-mobile@1x.png" 1x, "../../images/index-cat-bg-mobile@2x.png" 2x);
+  background: linear-gradient(to top, #ffffff 178px, rgba(104, 183, 56, 0.85) 178px), image-set("../../images/index-cat-bg-mobile@1x.png" 1x, "../../images/index-cat-bg-mobile@2x.png" 2x);
   background-repeat: no-repeat;
+  width: 320px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
   .promo__wrapper {
     color: #000000;
     background: #ffffff;
+    width: 709px;
+    text-align: left;
   }
 }
 
@@ -15,6 +21,7 @@
   .promo__wrapper {
     color: #000000;
     background: linear-gradient(to right, #ffffff 50%, rgba(104, 183, 56, 0.85) 50%), image-set("../../images/index-cat-bg-desktop@1x.png" 1x, "../../images/index-cat-bg-desktop@2x.png" 2x);
+    width: 1440px;
   }
 }
 
@@ -23,6 +30,8 @@
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
+  margin: 0;
+  padding-top: 27px;
 }
 
 @media screen and (min-width: 768px) {
@@ -46,16 +55,30 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .promo__image-wrapper {
+    display: flex;
+    order: 1;
+  }
+}
+
 .promo__button {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+  display: flex;
+  width: 280px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
   .promo__button {
     font-size: 20px;
     line-height: 26px;
+    margin: 0;
   }
 }
 
