--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -16,3 +16,4 @@
 @import "./blocks/catalog.scss";
 @import "./blocks/catalog-additionally.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/main-header.scss";
