--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -1,3 +1,8 @@
+.advantages__wrapper {
+  min-width: 280px;
+  margin: 0 20px;
+}
+
 .advantages__title {
   font-family: $secondary-font;
   font-size: 36px;
@@ -15,6 +20,37 @@
 
 .advantages__list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 37px 153px;
+  }
+}
+
+.advantages__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__item {
+    flex-direction: column;
+    align-items: start;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .advantages__item {
+    flex-direction: column;
+    align-items: start;
+  }
 }
 
 .advantages__description {
@@ -23,6 +59,8 @@
   font-weight: 400;
   line-height: 18px;
   color: #444444;
+  width: 200px;
+  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -55,10 +93,30 @@
   background-size: 30px 32px;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages__item--block-1::after {
+    content: "";
+    background-image: url("../../icons/stack.svg#one");
+    background-size: 112px 280px;
+    width: 112px;
+    height: 280px;
+  }
+}
+
 .advantages__item--block-2::before {
   content: "";
   background-image: url("../../icons/stack.svg#powder");
   background-size: 30px 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__item--block-2::after {
+    content: "";
+    background-image: url("../../icons/stack.svg#two");
+    background-size: 134px 280px;
+    width: 134px;
+    height: 280px;
+  }
 }
 
 .advantages__item--block-3::before {
@@ -67,8 +125,28 @@
   background-size: 30px 32px;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages__item--block-3::after {
+    content: "";
+    background-image: url("../../icons/stack.svg#three");
+    background-size: 134px 280px;
+    width: 134px;
+    height: 280px;
+  }
+}
+
 .advantages__item--block-4::before {
   content: "";
   background-image: url("../../icons/stack.svg#time");
   background-size: 30px 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__item--block-4::after {
+    content: "";
+    background-image: url("../../icons/stack.svg#four");
+    background-size: 136px 280px;
+    width: 136px;
+    height: 280px;
+  }
 }
