--- a/source/styles/blocks/catalog-additionally.scss
+++ b/source/styles/blocks/catalog-additionally.scss
@@ -1,3 +1,11 @@
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__wrapper {
+    display: flex;
+    gap: 80px;
+    align-items: center;
+  }
+}
+
 .catalog-additionally__title {
   font-family: $secondary-font;
   font-size: 24px;
@@ -22,6 +30,30 @@
 
 .catalog-additionally__list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.catalog-additionally__item {
+  width: 280px;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__item {
+    width: 632px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .catalog-additionally__item {
+    width: 894px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 .catalog-additionally__caption {
@@ -46,6 +78,8 @@
   font-weight: 400;
   line-height: 14px;
   color: #444444;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
@@ -59,6 +93,23 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+  width: 280px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__button {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .catalog-additionally__button {
+    width: 244px;
+  }
 }
 
 .button-primary {
