--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,5 +1,34 @@
+.main-footer__wrapper {
+  min-width: 320px;
+  text-align: center;
+  padding: 40px 20px;
+  box-sizing: border-box;
+  background-color: #f2f2f2;
+}
+
+@media screen and (min-width: 768px) {
+  .main-footer__wrapper {
+    padding: 55px 30px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-footer__wrapper {
+    padding: 66px 110px;
+  }
+}
+
 .main-footer-list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 
 .main-footer__link--vkontakte::before {
@@ -60,6 +89,18 @@
   line-height: 20px;
   color: #444444;
   text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .htmlacademy-link {
+    display: flex;
+    justify-content: space-between;
+    background-color: #f2f2f2;
+    gap: 23px;
+  }
 }
 
 .htmlacademy-link:hover,
