--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -15,20 +15,57 @@
 
 .catalog__list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+  }
 }
 
 .catalog__item {
   background-color: #ffffff;
+  display: grid;
+  grid-template-columns: 140px 140px;
+  grid-template-areas:
+    "img    title"
+    "img    info"
+    "button button";
+  width: 280px;
+  padding: 20px 20px 25px;
 }
 
 @media screen and (min-width: 768px) {
   .catalog__item {
+    background: linear-gradient(to bottom, #ffffff 81px, #f2f2f2 81px);
     background-color: #f2f2f2;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
   }
 }
 
 .catalog__link {
+  grid-area: img;
+}
+
+.catalog__link-caption {
   text-decoration: none;
+  width: 76px;
+  margin-bottom: 14px;
+  grid-area: title;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__link {
+    width: 135px;
+    height: auto;
+    display: block;
+  }
 }
 
 .catalog__caption {
@@ -38,17 +75,23 @@
   line-height: 20px;
   color: #222222;
   text-transform: uppercase;
+  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
   .catalog__caption {
     font-size: 20px;
     line-height: 24px;
+    text-align: center;
   }
 }
 
 .catalog__list-info {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  grid-area: info;
+  margin-bottom: 17px;
 }
 
 .catalog__item-info {
@@ -57,6 +100,9 @@
   font-weight: 400;
   line-height: 16px;
   color: #444444;
+  display: flex;
+  width: 140px;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
@@ -70,6 +116,18 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+  grid-area: button;
+  width: 280px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog__button {
+    width: 250px;
+  }
 }
 
 .button-primary {
@@ -82,6 +140,19 @@
 
 .catalog__item--more {
   background-color: #ffffff;
+  display: block;
+}
+
+.catalog__caption-more {
+  font-family: $secondary-font;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #222222;
+  text-transform: uppercase;
+  grid-area: title;
+  margin: 0;
+  text-align: center;
 }
 
 .catalog__text {
@@ -90,6 +161,7 @@
   font-weight: 400;
   line-height: 16px;
   color: #444444;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
